adicionar categoria e produto

--- a/aguanaboca/projeto_aguanaboca/templates/admin/lista_produtos.html
+++ b/aguanaboca/projeto_aguanaboca/templates/admin/lista_produtos.html
@@ -12,5 +12,6 @@
         {% endfor %}
     </ul>
     <a href="{% url 'adiciona_produto' %}">Adicionar Produto</a>
+    <a href="{% url 'adiciona_categoria' %}">Adicionar Categoria</a>
 </body>
 </html>
