--- a/aguanaboca/projeto_aguanaboca/templates/admin/lista_produtos.html
+++ b/aguanaboca/projeto_aguanaboca/templates/admin/lista_produtos.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Lista de Produtos</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <h1>Lista de Produtos</h1>
     {% for produto in produtos %}
         <div>
@@ -18,6 +14,4 @@
     {% endfor %}
     <a href="{% url 'adiciona_produto' %}">Adicionar Produto</a>
     <a href="{% url 'adiciona_categoria' %}">Adicionar Categoria</a>
-</body>
-</html>
-
+{% endblock %}
