--- a/aguanaboca/projeto_aguanaboca/templates/admin/lista_produtos.html
+++ b/aguanaboca/projeto_aguanaboca/templates/admin/lista_produtos.html
@@ -2,92 +2,139 @@
 
 {% block content %}
 
-    <style>
-        h1 {
-            color: #333;
-            text-align: center;
-            margin-bottom: 30px;
-        }
+<style>
+    h1 {
+        color: #333;
+        text-align: center;
+        margin-bottom: 30px;
+    }
 
-        .produto {
-            display: flex;
-            border: 1px solid #ddd;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+    .produto {
+        display: flex;
+        border: 1px solid #ddd;
+        padding: 20px;
+        margin-bottom: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
 
-        h2 {
-            color: #007bff;
-        }
+    h2 {
+        color: #007bff;
+    }
 
-        p {
-            color: #555;
-            margin-bottom: 10px;
-        }
+    p {
+        color: #555;
+        margin-bottom: 10px;
+    }
 
-        .descricao {
-            flex: 1;
-            margin-right: 20px;
-        }
+    .descricao {
+        flex: 1;
+        margin-right: 20px;
+    }
 
-        img {
-            max-width: 200px;
-            border-radius: 4px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-        }
+    img {
+        max-width: 200px;
+        border-radius: 4px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    }
 
-        hr {
-            border: 1px solid #eee;
-            margin: 20px 0;
-        }
+    hr {
+        border: 1px solid #eee;
+        margin: 20px 0;
+    }
 
-        .adicionar-link {
-            display: block;
-            background-color: #28a745;
-            color: #fff;
-            padding: 10px 15px;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 4px;
-            margin-top: 20px;
-            font-size: 16px;
-        }
+    .adicionar-link {
+        display: block;
+        background-color: #28a745;
+        color: #fff;
+        padding: 10px 15px;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 4px;
+        margin-top: 20px;
+        font-size: 16px;
+    }
 
-        .adicionar-link:hover {
-            background-color: #218838;
-        }
+    .adicionar-link:hover {
+        background-color: #218838;
+    }
 
-        .search-form {
-            margin-bottom: 20px;
-        }
+    .search-form {
+        margin-bottom: 20px;
+    }
 
-        .search-input {
-            padding: 5px;
-            width: 200px;
-        }
+    .search-input {
+        padding: 5px;
+        width: 200px;
+    }
 
-        .search-button {
-            padding: 5px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-    </style>
+    .search-button {
+        padding: 5px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    .editar-button,
+    .remover-button {
+        display: inline-block;
+        padding: 8px 15px;
+        margin-top: 10px;
+        margin-right: 10px;
+        margin-left: 10px;
+        text-align: center;
+        text-decoration: none;
+        color: #fff;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    .editar-button {
+        background-color: #007bff;
+    }
+
+    .editar-button:hover {
+        background-color: #0056b3;
+    }
+
+    .remover-button {
+        background-color: #dc3545;
+    }
+
+    .remover-button:hover {
+        background-color: #c82333;
+    }
+</style>
 
     <h1>Lista de Produtos</h1>
 
-    <form class="search-form" method="GET">
-        <input class="search-input" type="text" name="q" placeholder="Buscar por nome" value="{{ request.GET.q }}">
-        <button class="search-button" type="submit">Buscar</button>
-    </form>
+<form class="search-form" method="GET">
+    <input class="search-input" type="text" name="q" placeholder="Buscar por nome" value="{{ request.GET.q }}">
+    <button class="search-button" type="submit">Buscar</button>
+</form>
 
-    {% if request.GET.q %}
+<form class="search-form" method="GET">
+    <select class="search-input" name="categoria">
+        <option value="" {% if not request.GET.categoria %}selected{% endif %}>Selecionar Categoria</option>
+        {% for categoria in categorias %}
+            <option value="{{ categoria.id }}" {% if categoria.id == request.GET.categoria %}selected{% endif %}>
+                {{ categoria.nome }}
+            </option>
+        {% endfor %}
+    </select>
+    <button class="search-button" type="submit">Filtrar por Categoria</button>
+</form>
+
+<form class="search-form" method="GET">
+    <input class="search-input" type="number" name="preco" placeholder="Informe o preço máximo" value="{{ request.GET.preco }}">
+    <button class="search-button" type="submit">Filtrar por Preço</button>
+</form>
+
+{% if produtos %}
         {% for produto in produtos %}
-            {% if produto.nome|lower in request.GET.q|lower %}
+            {% if not request.GET.q or produto.nome|lower in request.GET.q|lower and not request.GET.categoria or produto.categoria.id == request.GET.categoria|add:0 %}
                 <div class="produto">
                     <div class="descricao">
                         <h2>{{ produto.nome }}</h2>
@@ -97,24 +144,16 @@
                     {% if produto.imagem %}
                         <img src="{{ produto.imagem.url }}" alt="{{ produto.nome }} Image">
                     {% endif %}
+                    <div>
+                        <a class="editar-button" href="{% url 'edita_produto' produto.id %}">Editar</a>
+                        <a class="remover-button" href="{% url 'remove_produto' produto.id %}">Remover</a>
+                    </div>
                 </div>
                 <hr>
             {% endif %}
         {% endfor %}
     {% else %}
-        {% for produto in produtos %}
-            <div class="produto">
-                <div class="descricao">
-                    <h2>{{ produto.nome }}</h2>
-                    <p>Preço: R$ {{ produto.preco }}</p>
-                    <p>{{ produto.descricao }}</p>
-                </div>
-                {% if produto.imagem %}
-                    <img src="{{ produto.imagem.url }}" alt="{{ produto.nome }} Image">
-                {% endif %}
-            </div>
-            <hr>
-        {% endfor %}
+        <p>Nenhum produto encontrado.</p>
     {% endif %}
 
     <a class="adicionar-link" href="{% url 'adiciona_produto' %}">Adicionar Produto</a>
