--- a/aguanaboca/projeto_aguanaboca/templates/base.html
+++ b/aguanaboca/projeto_aguanaboca/templates/base.html
@@ -50,6 +50,7 @@
         <a href="{% url 'lista_produtos' %}">Lista de Produtos</a>
         <a href="{% url 'adiciona_produto' %}">Adicionar Produto</a>
         <a href="{% url 'adiciona_categoria' %}">Adicionar Categoria</a>
+        <a href="{% url 'lista_categorias' %}">Categorias</a>
     </nav>
 
     <main>
