--- a/aguanaboca/projeto_aguanaboca/templates/admin/confirma_remove_categoria.html
+++ b/aguanaboca/projeto_aguanaboca/templates/admin/confirma_remove_categoria.html
@@ -25,12 +25,12 @@
 
         form {
             text-align: center;
-            margin-top: 20px;  /* Adicionado espaço entre o parágrafo e o formulário */
+            margin-top: 20px;  
         }
 
         .remocao-container button,
         .remocao-container a {
-            display: inline-block;  /* Garante que os botões fiquem na mesma linha */
+            display: inline-block;  
             padding: 10px 15px;
             border-radius: 4px;
             cursor: pointer;
