--- a/aguanaboca/projeto_aguanaboca/templates/admin/lista_produtos.html
+++ b/aguanaboca/projeto_aguanaboca/templates/admin/lista_produtos.html
@@ -165,4 +165,5 @@
 
     <a class="adicionar-link" href="{% url 'adiciona_produto' %}">Adicionar Produto</a>
     <a class="adicionar-link" href="{% url 'adiciona_categoria' %}">Adicionar Categoria</a>
+    <a class="adicionar-link" href="{% url 'adiciona_categoria' %}">Adicionar Categoria</a>
 {% endblock %}
