--- a/aguanaboca/projeto_aguanaboca/templates/admin/edita_categoria.html
+++ b/aguanaboca/projeto_aguanaboca/templates/admin/edita_categoria.html
@@ -2,42 +2,85 @@
 
 {% block content %}
 
-    <style>
-        h1 {
-            color: #333;
-            text-align: center;
-            margin-bottom: 30px;
-        }
+<style>
+    body {
+        background-color: #f8f9fa;
+        font-family: 'Helvetica', sans-serif;
+        margin: 0;
+        padding: 0;
+    }
 
-        p {
-            color: #555;
-            margin-bottom: 20px;
-        }
+    h1 {
+        color: #007bff;
+        text-align: center;
+        margin-bottom: 30px;
+    }
 
-        form {
-            text-align: center;
-            margin-top: 20px;  /* Adicionado espaço entre o parágrafo e o formulário */
-        }
-        button {
-            display: center;
-            width: 10%;
-            padding: 10px 15px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-    </style>
-    
-    <h1>Editar Categoria</h1>
+    form {
+        max-width: 600px;
+        margin: 0 auto;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
 
-    <form method="post" action="{% url 'edita_categoria' categoria.id %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Salvar Alterações</button>
-    </form>
+    label {
+        display: block;
+        margin-bottom: 8px;
+        color: #333;
+    }
 
-    <a href="{% url 'lista_categorias' %}">Cancelar</a>
+    input[type="text"],
+    input[type="number"] {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 16px;
+        box-sizing: border-box;
+    }
+
+    input[type="file"] {
+        margin-bottom: 16px;
+    }
+
+    button {
+        background-color: #28a745;
+        color: #fff;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 16px;
+        margin-right: 10px;
+    }
+
+    button:hover {
+        background-color: #218838;
+    }
+
+    .cancel-button {
+        background-color: #dc3545;
+        color: #fff;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 16px;
+        text-decoration: none;
+    }
+
+    .cancel-button:hover {
+        background-color: #c82333;
+    }
+</style>
+
+<h1>Editar Categoria</h1>
+
+<form method="post" action="{% url 'edita_categoria' categoria.id %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Salvar Alterações</button>
+    <a href="{% url 'lista_categorias' %}" class="cancel-button">Cancelar</a>
+</form>
+
 {% endblock %}
