remove_produto update

--- a/aguanaboca/projeto_aguanaboca/templates/base.html
+++ b/aguanaboca/projeto_aguanaboca/templates/base.html
@@ -45,7 +45,9 @@
     </style>
 </head>
 <body>
+    
     <nav>
+        <a href="{% url 'lista_produtos' %}">AGUANABOCA</a>
         <img src="https://cdn-icons-png.flaticon.com/512/3448/3448609.png" alt="Logo do restaurante">
         <a href="{% url 'lista_produtos' %}">Lista de Produtos</a>
         <a href="{% url 'adiciona_produto' %}">Adicionar Produto</a>
@@ -58,7 +60,7 @@
     </main>
 
     <footer>
-        © 2023 Aguanaboca. Todos os direitos reservados.
+       Todos os direitos reservados.
     </footer>
 </body>
 </html>
