--- a/aguanaboca/projeto_aguanaboca/templates/admin/adiciona_categoria.html
+++ b/aguanaboca/projeto_aguanaboca/templates/admin/adiciona_categoria.html
@@ -10,7 +10,7 @@
         }
 
         h1 {
-            color: #333;
+            color: #b81414;
             text-align: center;
             margin-bottom: 30px;
         }
@@ -38,7 +38,7 @@
         }
 
         button {
-            background-color: #3498db;
+            background-color: #28a745;
             color: #fff;
             padding: 10px 15px;
             border: none;
