--- a/aguanaboca/projeto_aguanaboca/templates/base.html
+++ b/aguanaboca/projeto_aguanaboca/templates/base.html
@@ -10,7 +10,7 @@
         }
 
         nav {
-            background-color: #3498db;
+            background-color: #b81414;
             padding: 10px;
             text-align: center;
             margin: 0; 
