--- a/aguanaboca/projeto_aguanaboca/templates/admin/edita_categoria.html
+++ b/aguanaboca/projeto_aguanaboca/templates/admin/edita_categoria.html
@@ -11,7 +11,7 @@
     }
 
     h1 {
-        color: #007bff;
+        color: #b81414;
         text-align: center;
         margin-bottom: 30px;
     }
