--- a/aguanaboca/projeto_aguanaboca/templates/admin/form_produto.html
+++ b/aguanaboca/projeto_aguanaboca/templates/admin/form_produto.html
@@ -10,7 +10,7 @@
         }
 
         h1 {
-            color: #007bff;
+            color: #b81414;
             text-align: center;
             margin-bottom: 30px;
         }
