--- a/aguanaboca/projeto_aguanaboca/templates/admin/lista_produtos.html
+++ b/aguanaboca/projeto_aguanaboca/templates/admin/lista_produtos.html
@@ -19,7 +19,7 @@
     }
 
     h2 {
-        color: #007bff;
+        color: #333;
     }
 
     p {
@@ -70,7 +70,7 @@
 
     .search-button {
         padding: 5px;
-        background-color: #007bff;
+        background-color: #b81414;
         color: #fff;
         border: none;
         border-radius: 4px;
